--- a/assets/DebugBar/themes/light/theme.css
+++ b/assets/DebugBar/themes/light/theme.css
@@ -3,3 +3,7 @@
     background: linear-gradient(180deg, rgba(246,246,246,1) 0%, rgba(255,255,255,1) 46%) !important;
     border-top: 1px solid #b3b3b3 !important;
 }
+
+.ggrach__debug_bar__log {
+    border-top: 1px solid #b3b3b3 !important;
+}
