--- a/assets/DebugBar/themes/light/theme.css
+++ b/assets/DebugBar/themes/light/theme.css
@@ -7,3 +7,8 @@
 .ggrach__debug_bar__log {
     border-top: 1px solid #b3b3b3 !important;
 }
+
+.ggrach__debug_bar__log__line {
+    font-size: 12px;
+    color: darkgrey;
+}
