--- a/assets/DebugBar/themes/general.css
+++ b/assets/DebugBar/themes/general.css
@@ -18,6 +18,16 @@
     z-index: 9998;
 }
 
+.ggrach__debug_bar__item {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+    -khtml-user-select: none;    /* Konqueror */
+    -moz-user-select: none;      /* Firefox */
+    -ms-user-select: none;       /* Internet Explorer/Edge */
+    user-select: none;           /* Non-prefixed version, currently
+                                    not supported by any browser */
+}
+
 .ggrach__debug_bar > .ggrach__debug_bar__item {
     display: flex !important;
     line-height: 33px !important;
