--- a/assets/DebugBar/css/themes/general.css
+++ b/assets/DebugBar/css/themes/general.css
@@ -83,6 +83,7 @@
     border-bottom: 1px solid #c3c3c3 !important;
     font-size: 13px !important;
     line-height: 16px !important;
+    margin: 0 !important;
 }
 
 .ggrach__debug_bar__log > pre > code {
