--- a/ggrachdev.debugbar/install/css/general.css
+++ b/ggrachdev.debugbar/install/css/general.css
@@ -1,4 +1,4 @@
-.ggrach__debug_bar {
+.ggrach__debug-bar {
     width: 100% !important;
     position: fixed !important;
     bottom: 0 !important;
@@ -6,6 +6,14 @@
     z-index: 9999 !important;
     display: flex !important;
     align-items: center !important;
+}
+
+.ggrach__debug-bar:not(.hide-debug-bar) {
+    left: 0 !important;
+}
+
+.ggrach__debug-bar * {
+    font-family: Arial !important;
 }
 
 .ggrach__overlay {
@@ -19,7 +27,7 @@
     cursor: pointer;
 }
 
-.ggrach__debug_bar__item {
+.ggrach__debug-bar__item {
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none;   /* Chrome/Safari/Opera */
     -khtml-user-select: none;    /* Konqueror */
@@ -29,17 +37,18 @@
                                     not supported by any browser */
 }
 
-.ggrach__debug_bar__right {
+.ggrach__debug-bar__right {
     position: absolute !important;
     top: -1px !important;
     right: 0 !important;
     display: flex !important;
 }
 
-.ggrach__debug_bar__right__item {
+.ggrach__debug-bar__right__item {
     height: calc(100% + 1px) !important;
     display: flex !important;
     min-width: 30px !important;
+    text-decoration: none !important;
     padding-left: 3px;
     padding-right: 3px;
     justify-content: center !important;
@@ -53,7 +62,7 @@
                                     not supported by any browser */
 }
 
-.ggrach__debug_bar > .ggrach__debug_bar__item {
+.ggrach__debug-bar > .ggrach__debug-bar__item {
     display: flex !important;
     line-height: 33px !important;
     justify-content: center !important;
@@ -69,7 +78,7 @@
     border-right: 1px solid #4c4c4c;
 }
 
-.ggrach__debug_bar__log {
+.ggrach__debug-bar__log {
     position: absolute !important;
     bottom: 30px !important;
     left: 0 !important;
@@ -80,7 +89,7 @@
     overflow: auto !important;
 }
 
-.ggrach__debug_bar__log > pre {
+.ggrach__debug-bar__log > pre {
     padding: 10px !important;
     padding-bottom: 7px !important;
     border-bottom: 1px solid #c3c3c3 !important;
@@ -89,15 +98,15 @@
     margin: 0 !important;
 }
 
-.ggrach__debug_bar__log > pre > code {
+.ggrach__debug-bar__log > pre > code {
     white-space: nowrap !important;
 }
 
-.ggrach__debug_bar__log > pre:last-child {
+.ggrach__debug-bar__log > pre:last-child {
     border-bottom: unset !important;
 }
 
-.ggrach__debug_bar__item.active {
+.ggrach__debug-bar__item.active {
     font-weight: bold !important;
     height: 41px !important;
     line-height: 41px !important;
@@ -105,7 +114,7 @@
     border-radius: 7px 7px 0 0;
 }
 
-.ggrach__debug_bar__item.type-notice-notice {
+.ggrach__debug-bar__item.type-notice-notice {
     order: 3;
 }
 
@@ -118,7 +127,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#193c77",endColorstr="#126194",GradientType=1);
 }
 
-.ggrach__debug_bar__item.type-notice-warning {
+.ggrach__debug-bar__item.type-notice-warning {
     order: 2;
 }
 
@@ -131,7 +140,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b3c32b",endColorstr="#d5e01b",GradientType=1);
 }
 
-.ggrach__debug_bar__item.type-notice-error {
+.ggrach__debug-bar__item.type-notice-error {
     order: 1;
 }
 
@@ -145,7 +154,7 @@
 }
 
 
-.ggrach__debug_bar__item.type-notice-success {
+.ggrach__debug-bar__item.type-notice-success {
     order: 4;
 }
 
@@ -159,11 +168,11 @@
 }
 
 
-.ggrach__debug_bar__item.type-notice-get {
+.ggrach__debug-bar__item.type-notice-get {
     order: 10;
 }
 
-.ggrach__debug_bar__item.type-notice-post {
+.ggrach__debug-bar__item.type-notice-post {
     order: 11;
 }
 
@@ -185,7 +194,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#603434",endColorstr="#835555",GradientType=1);
 }
 
-.ggrach__debug_bar__item.type-notice-cookie {
+.ggrach__debug-bar__item.type-notice-cookie {
     order: 13;
 }
 
@@ -198,7 +207,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#57618a",endColorstr="#897bb0",GradientType=1);
 }
 
-.ggrach__debug_bar__item.type-notice-bx {
+.ggrach__debug-bar__item.type-notice-bx {
     order: 15;
 }
 
@@ -211,7 +220,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#883f3f",endColorstr="#a83a3a",GradientType=1);
 }
 
-.ggrach__debug_bar__item.type-notice-server {
+.ggrach__debug-bar__item.type-notice-server {
     order: 14;
 }
 
@@ -229,29 +238,29 @@
     background: #000;
 }
 
-.ggrach__debug_bar__right__item_close {
+.ggrach__debug-bar__right__item_close {
     font-size: 26px !important;
 }
 
-.ggrach__debug_bar.hide-debug-bar > * {
+.ggrach__debug-bar.hide-debug-bar > * {
     display: none !important;
 }
 
-.ggrach__debug_bar.hide-debug-bar {
+.ggrach__debug-bar.hide-debug-bar {
     background: transparent !important;
     border: unset !important;
     width: 30px !important;
     right: 0 !important;
 }
 
-.ggrach__debug_bar.hide-debug-bar > .ggrach__debug_bar__right {
+.ggrach__debug-bar.hide-debug-bar > .ggrach__debug-bar__right {
     display: flex !important;
 }
 
-.ggrach__debug_bar.hide-debug-bar > .ggrach__debug_bar__right > * {
+.ggrach__debug-bar.hide-debug-bar > .ggrach__debug-bar__right > * {
     display: none !important;
 }
 
-.ggrach__debug_bar.hide-debug-bar > .ggrach__debug_bar__right > [data-click="toggle_debug_bar"] {
+.ggrach__debug-bar.hide-debug-bar > .ggrach__debug-bar__right > [data-click="toggle_debug_bar"] {
     display: flex !important;
 }
