--- a/ggrachdev.debugbar/install/css/general.css
+++ b/ggrachdev.debugbar/install/css/general.css
@@ -86,6 +86,7 @@
     background: white !important;
     padding: 0px 15px 15px 0px !important;
     max-height: 500px !important;
+    text-decoration: none !important;
     overflow: auto !important;
 }
 
